--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -10,16 +10,19 @@
   <link rel="stylesheet" href="/autenticacao.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
+
 <body>
+  <!-- Main Content -->
   <main>
     <div class="auth-container">
       <div class="auth-box">
+        <!-- Tabs for Login and Register -->
         <div class="tabs">
           <button class="tab-btn active" data-tab="login">Login</button>
           <button class="tab-btn" data-tab="register">Criar Conta</button>
         </div>
 
-        <!-- Formulário de Login -->
+        <!-- Login Form -->
         <div class="form-container active" id="login-form">
           <h2>Acessar minha conta</h2>
           <form>
@@ -47,7 +50,7 @@
           </form>
         </div>
 
-        <!-- Formulário de Registro -->
+        <!-- Register Form -->
         <div class="form-container" id="register-form">
           <h2>Criar nova conta</h2>
           <form>
@@ -91,7 +94,7 @@
               <label for="register-photo">Foto de Perfil</label>
               <input type="file" id="register-photo" name="foto" accept="image/*" required>
             </div>
-            
+
             <div class="form-options">
               <label class="terms-checkbox">
                 <input type="checkbox" id="terms" required>
@@ -103,7 +106,7 @@
           </form>
         </div>
 
-        <!-- Formulário de Recuperação de Senha -->
+        <!-- Password Recovery Form -->
         <div class="form-container" id="forgot-password-form">
           <h2>Recuperar Senha</h2>
           <p class="form-description">
@@ -124,6 +127,7 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <div class="footer-grid">
@@ -141,9 +145,9 @@
           <h4>Links Rápidos</h4>
           <ul>
             <li><a href="index.html">Início</a></li>
-                        <li><a href="veiculos.html">Veículos</a></li>
-                        <li><a href="servicos.html">Serviços</a></li>
-                        <li><a href="contatos.html">Contato</a></li>
+            <li><a href="veiculos.html">Veículos</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="contatos.html">Contato</a></li>
           </ul>
         </div>
         <div class="footer-contact">
