--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <!-- Contact Form and Map Section -->
+    <!-- Contact Form Section -->
     <section class="contact-form-section">
         <div class="container-contact">
             <div class="contact-grid">
