--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="car-price">
                             <span class="price">R$ 420.000</span>
-                            <a href="/Carros/deatalhesBMW X3.html" class="btn btn-sm">Ver Detalhes</a>
+                            <a href="/Carros/detalhesBMW X3.html" class="btn btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -630,3 +630,4 @@
 </body>
 
 </html>
+``` 
