--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/CRUDusuario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -90,30 +91,51 @@
             <form id="user-form">
                 <input type="hidden" id="user-id" name="id">
 
+                <div class="avatar-upload-container">
+                    <div class="avatar-preview">
+                        <img id="avatar-preview-img" src="/fotos/comercial.png" alt="Prévia do Avatar">
+                    </div>
+                    <div class="avatar-upload-wrapper">
+                        <label for="avatar-upload" class="avatar-upload-label">Escolher Foto</label>
+                        <input type="file" id="avatar-upload" accept="image/*" style="display:none;">
+                    </div>
+                </div>
+
                 <div class="form-row">
                     <div class="form-group">
                         <label for="nome">Nome completo</label>
                         <input type="text" id="nome" name="nome" required>
+                        <small class="form-text text-muted validation-message">Digite o nome do usuário.</small>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" required>
+                        <small class="form-text text-muted validation-message">Digite um email válido.</small>
                     </div>
-                    <div class="form-group">
+                   <div class="form-group">
                         <label for="senha">Senha:</label>
-                        <input type="password" id="senha" name="senha" required>
-                      </div>
-                      
-                </div>
+                        <div class="password-input-container">
+                            <input type="password" id="senha" class="form-control">
+                            <span class="password-toggle" data-target="senha"><i class="fas fa-eye"></i></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="confirmar-senha">Confirmar Senha:</label>
+                        <input type="password" id="confirmar-senha" class="form-control">
+                        <small class="form-text text-muted validation-message">Confirme a senha.</small>
+                    </div>
 
                 <div class="form-row">
                     <div class="form-group">
                         <label for="telefone">Telefone</label>
                         <input type="tel" id="telefone" name="telefone">
+                        <small class="form-text text-muted validation-message">Digite o telefone do usuário.</small>
                     </div>
                     <div class="form-group">
                         <label for="cpf">CPF</label>
                         <input type="text" id="cpf" name="cpf" required>
+                        <small class="form-text text-muted validation-message">Digite o CPF do usuário.</small>
                     </div>
                 </div>
 
@@ -131,9 +153,25 @@
                 <div class="form-actions">
                     <button type="button" class="btn btn-outline" onclick="closeModal()">Cancelar</button>
                     <button type="submit" class="btn btn-primary">Salvar</button>
-                    
+
                 </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<div id="delete-modal" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="modal-title">Confirmar Exclusão</h2>
+            <button class="close-modal" onclick="closeDeleteModal()"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-body">
+            <p>Tem certeza que deseja excluir <strong id="delete-user-name">este usuário</strong>?</p>
+            <div class="modal-buttons">
+                <button onclick="confirmDelete()" class="btn btn-danger">Excluir</button>
+                <button onclick="closeDeleteModal()" class="btn btn-secondary">Cancelar</button>
+            </div>
         </div>
     </div>
 </div>
