--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -54,8 +54,8 @@
     <input type="number" id="ano" name="ano" placeholder="Ex: 2023" required />
   </div>
   <div class="form-group">
-    <label for="preco">Preço</label>
-    <input type="number" id="preco" name="preco" placeholder="Ex: 150000" required />
+    <label for="valor">Valor</label>
+    <input type="number" id="valor" name="valor" placeholder="Ex: 150000" required />
   </div>
   <div class="form-group">
     <label for="quilometragem">Quilometragem</label>
@@ -165,5 +165,7 @@
 </footer>
 
   <script src="/routes/sessao.js" defer></script>
+  <script src="/CRUDveiculos.js" defer></script>
+
 </body>
 </html>
