criação da sessaoao de perfil

--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -48,6 +48,8 @@
                         </div>
 
                         <button type="submit" class="btn-submit">Entrar</button>
+                        <button onclick="window.location.href='index.html'" class="btn-home">Início</button>
+
                     </form>
                 </div>
 
