--- a/pages/index.html
+++ b/pages/index.html
@@ -10,28 +10,36 @@
 <body>
 <!-- Header -->
 <header>
-    <div class="container">
-        <div class="logo">
-            <h1>Auto<span>Elite</span></h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Início</a></li>
-                    <li><a href="/veiculos.html">Veículos</a></li>
-                    <li><a href="/servicos.html">Serviços</a></li>
-                    <li><a href="/contatos.html">Contato</a></li>
-                    <li id="CrudUsuario"><a href="/CRUDusuario.html">CRUDusuario</a></li>
-                    <li id="CrudVeiculos"><a href="/CRUDveiculos.html">CRUDveiculos</a></li>
-            </ul>
-        </nav>
-        <div class="login-button" id="user-info">
-            <!-- Será preenchido via JavaScript -->
-            <a href="/autenticacao.html" class="btn-login" id="login-link">
-                <i class="fas fa-user"></i> Login
-                <div id="user-info" class="user-info"></div>
+  <div class="container">
+    <div class="logo">
+      <h1>Auto<span>Elite</span></h1>
+    </div>
 
-            </a>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Início</a></li>
+        <li><a href="/veiculos.html">Veículos</a></li>
+        <li><a href="/servicos.html">Serviços</a></li>
+        <li><a href="/contatos.html">Contato</a></li>
+        <li id="CrudUsuario"><a href="/CRUDusuario.html">CRUDusuario</a></li>
+        <li id="CrudVeiculos"><a href="/CRUDveiculos.html">CRUDveiculos</a></li>
+      </ul>
+    </nav>
+
+    <div class="login-button" id="user-info">
+    <!-- Exibido quando não estiver logado -->
+    <a href="/autenticacao.html" class="btn-login" id="login-link">
+        <i class="fas fa-user"></i> Login
+    </a>
+
+    </div>
+
+  </div>
+</header>
+
+
         </div>
+
 </header>
 
 
