--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -73,15 +73,16 @@
 
                         <div class="form-group">
                             <label for="register-phone">Telefone</label>
-                            <input type="tel" id="register-phone" placeholder="(00) 00000-0000" required>
+                            <input type="tel" id="register-phone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" >
                             <small class="form-text text-muted validation-message">Formato: (XX) 9XXXXXXXX.</small>
                         </div>
 
                         <div class="form-group">
                             <label for="cpf">CPF</label>
-                            <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required>
+                            <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required inputmode="numeric" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
                             <small class="form-text text-muted validation-message">Digite um CPF válido.</small>
                         </div>
+
                         <div class="form-group password-container">
                             <label for="register-password">Senha</label>
                             <input type="password" id="register-password" placeholder="Crie uma senha" required>
