--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -7,7 +7,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-blue-950 via-indigo-900 to-blue-800 min-h-screen font-sans text-white">
-
+  <!-- Alerta de sucesso fixo no topo -->
+  <div id="alerta-sucesso" class="hidden fixed top-4 left-1/2 transform -translate-x-1/2 bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg z-50 transition-opacity duration-500 opacity-0">
+    Perfil atualizado com sucesso! Redirecionando...
+  </div>
 
   <div class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-lg shadow-lg mt-10">
     <h1 class="text-2xl font-semibold text-white mb-6">Editar Perfil</h1>
@@ -23,73 +26,100 @@
       <!-- Nome -->
       <div>
         <label for="nome" class="block text-sm font-medium text-gray-200">Nome:</label>
-        <input type="text" id="nome" name="nome" required
-          class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+        <input type="text" id="nome" name="nome" required class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md" />
+        <p id="erro-nome" class="text-red-400 text-sm hidden mt-1">Nome inválido (mínimo 3 caracteres).</p>
       </div>
 
       <!-- Email -->
       <div>
         <label for="email" class="block text-sm font-medium text-gray-200">Email:</label>
-        <input type="email" id="email" name="email" required
-          class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+        <input type="email" id="email" name="email" required class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md" />
+        <p id="erro-email" class="text-red-400 text-sm hidden mt-1">Email inválido.</p>
       </div>
 
       <!-- Telefone -->
       <div>
         <label for="telefone" class="block text-sm font-medium text-gray-200">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" required
-          class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
-      </div>
-
-      <!-- Imagem Atual -->
-      <div class="mb-4">
-        <label class="block text-sm font-medium text-gray-200">Imagem Atual:</label>
-        <img id="imagemAtual" src="" alt="Imagem atual do perfil"
-          class="mt-2 w-32 h-32 object-cover rounded-full border border-gray-600 shadow"
-          style="display: none;">
+        <input type="tel" id="telefone" name="telefone" class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md" />
+        <p id="erro-telefone" class="text-red-400 text-sm hidden mt-1">Telefone inválido.</p>
       </div>
 
       <!-- Foto de Perfil -->
       <div>
-        <label for="foto-perfil" class="block text-sm font-medium text-gray-200">Foto de Perfil:</label>
-        <input type="file" id="foto-perfil" name="foto-perfil" accept="image/*"
-          class="mt-1 p-3 w-full text-sm text-gray-200 bg-gray-900 border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+        <label for="fotoPerfil" class="block text-sm font-medium text-gray-200">Foto de Perfil:</label>
+        <input type="file" id="fotoPerfil" name="foto" accept="image/*" class="mt-1 block w-full text-sm text-gray-300 bg-gray-900 border border-gray-700 rounded-md cursor-pointer" />
+        <p id="erro-foto" class="text-red-400 text-sm hidden mt-1"></p>
+        <img id="imagemAtual" src="" alt="Imagem atual" class="mt-4 rounded-full w-24 h-24 hidden object-cover" />
       </div>
 
       <!-- Senha -->
       <div>
         <label for="senha" class="block text-sm font-medium text-gray-200">Nova Senha:</label>
-        <input type="password" id="senha" name="senha" placeholder="Deixe em branco se não quiser alterar"
-          class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+        <div class="relative">
+          <input type="password" id="senha" name="senha" class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md pr-10" />
+          <button type="button" id="toggle-senha" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400">
+            <svg id="icone-senha" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-5 h-5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 
+              9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+            </svg>
+          </button>
+        </div>
+        <p id="erro-senha" class="text-red-400 text-sm hidden mt-1">Senha deve ter no mínimo 6 caracteres.</p>
       </div>
 
       <!-- Confirmar Senha -->
       <div>
-        <label for="confirmar-senha" class="block text-sm font-medium text-gray-200">Confirmar Nova Senha:</label>
-        <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha"
-          class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+        <label for="confirmarSenha" class="block text-sm font-medium text-gray-200">Confirmar Senha:</label>
+        <div class="relative">
+          <input type="password" id="confirmarSenha" name="confirmarSenha" class="mt-1 p-3 w-full bg-gray-900 text-white border border-gray-700 rounded-md pr-10" />
+          <button type="button" id="toggle-confirmar-senha" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400">
+            <svg id="icone-confirmar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-5 h-5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 
+              9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+            </svg>
+          </button>
+        </div>
+        <p id="erro-confirmar-senha" class="text-red-400 text-sm hidden mt-1">As senhas não coincidem.</p>
       </div>
 
-      <!-- Botão de Enviar -->
-      <div>
-        <button type="submit"
-          class="w-full p-3 bg-indigo-600 text-white rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
-          Salvar alterações
+      <!-- Botão -->
+      <div class="text-right">
+        <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 transition duration-300 text-white font-semibold py-2 px-6 rounded-lg">
+          Salvar Alterações
         </button>
       </div>
     </form>
-
-    <p id="mensagem-perfil" class="mt-4 text-sm text-gray-400"></p>
-
-    <!-- Botão para Voltar -->
-    <div class="flex justify-center mt-8">
-      <a href="index.html" 
-        class="px-6 py-2 text-sm font-medium text-indigo-200 bg-transparent border border-indigo-400 rounded-md hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-opacity-50">
-        ← Voltar à página inicial
-      </a>
-    </div>
   </div>
 
-  <script src="/routes/perfil.js"></script>
+  <!-- Suporte para exibir nome e imagem do usuário logado no topo (opcional) -->
+  <header class="absolute top-4 right-6 flex items-center gap-4" id="perfil-area" style="display: none;">
+    <span id="nome-usuario" class="text-white font-semibold"></span>
+    <img id="foto-perfil" src="" alt="Foto perfil" class="w-10 h-10 rounded-full object-cover border border-white" />
+  </header>
+
+  <!-- Simulação de link de login (opcional) -->
+  <a href="/login.html" id="login-link" class="absolute top-4 right-6 text-white underline">Login</a>
+
+  <script src="perfil.js"></script>
+  <script>
+  document.getElementById("form-perfil").addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    // Aqui você pode incluir validações, envio ao backend, etc.
+    // Suponha que a atualização foi bem-sucedida...
+
+    const alerta = document.getElementById("alerta-sucesso");
+    alerta.classList.remove("hidden");
+    setTimeout(() => alerta.classList.remove("opacity-0"), 10); // animação fade-in
+
+    // Redireciona após 2.5 segundos
+    setTimeout(() => {
+      window.location.href = "index.html";
+    }, 2500);
+  });
+</script>
+
 </body>
 </html>
