--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -73,6 +73,16 @@
     <label for="condicao">Condição</label>
     <input type="text" id="condicao" name="condicao" placeholder="Ex: Usado" required />
   </div>
+  <div class="form-group">
+  <label for="imagem">Imagem do Veículo</label>
+  <div class="image-upload-container">
+    <input type="file" id="imagem" name="imagem" accept="image/*" />
+    <div class="image-preview">
+      <img id="imagem-preview" src="/placeholder.svg?height=150&width=250" alt="Preview da imagem" />
+    </div>
+  </div>
+  <small>Selecione uma imagem do veículo (JPG, PNG - máx. 2MB)</small>
+</div>
 
   <button type="submit" class="btn btn-primary">Adicionar Veículo</button>
 </form>
@@ -80,10 +90,11 @@
       <table>
         <thead>
           <tr>
+            <th>Imagem</th>
             <th>Marca</th>
             <th>Modelo</th>
             <th>Ano</th>
-            <th>Preço</th>
+            <th>Valor</th>
             <th>Ações</th>
           </tr>
         </thead>
