--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -2,190 +2,185 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AutoElite - Faça login ou crie sua conta." />
-    <title>Login | AutoElite</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/autenticacao.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="AutoElite - Faça login ou crie sua conta." />
+  <title>Login | AutoElite</title>
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/autenticacao.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
 </head>
 
 <body>
-    <main>
-        <div class="auth-container">
-            <div class="auth-box">
-                <div class="tabs">
-                    <button class="tab-btn active" data-tab="login">Login</button>
-                    <button class="tab-btn" data-tab="register">Criar Conta</button>
-                </div>
-                <div class="form-container active" id="login-form">
-                    <h2>Acessar minha conta</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="login-email">E-mail</label>
-                            <input type="email" id="login-email" placeholder="Seu e-mail" required>
-                            <span id="erroLoginEmail" class="erro"></span>
-                        </div>
-
-                        <div class="form-group password-container">
-                            <label for="login-password">Senha</label>
-                            <input type="password" id="login-password" placeholder="Sua senha" required>
-                            <span class="password-toggle" id="toggle-login-password">
-                                <i class="fas fa-eye"></i>
-                            </span>
-                            <span id="erroLoginSenha" class="erro"></span>
-                        </div>
-
-                        <div class="form-options">
-                            <label class="remember-me">
-                                <input type="checkbox" id="remember">
-                                <span>Lembrar-me</span>
-                            </label>
-                            <a href="#" class="forgot-password" id="forgot-password-link">Esqueci minha senha</a>
-                        </div>
-
-                        <button type="submit" class="btn-submit">Entrar</button>
-                        <button onclick="window.location.href='index.html'" class="btn-home">Início</button>
-
-                    </form>
-                </div>
-
-                <div class="form-container" id="register-form">
-                    <h2>Criar nova conta</h2>
-                    <form id="form-registro">
-                        <div class="form-group">
-                            <label for="register-name">Nome completo</label>
-                            <input type="text" id="register-name" placeholder="Seu nome completo" required>
-                            
-
-                        </div>
-                        
-
-                        <div class="form-group">
-                            <label for="register-email">E-mail</label>
-                            <input type="email" id="register-email" placeholder="Seu e-mail" required>
-                            <small class="form-text text-muted validation-message">Insira um e-mail do Gmail no formato correto.</small>
-
-                        </div>
-
-                        <div class="form-group">
-                            <label for="register-phone">Telefone</label>
-                            <input type="tel" id="register-phone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" >
-                            <small class="form-text text-muted validation-message">Formato: (XX) 9XXXXXXXX.</small>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="cpf">CPF</label>
-                            <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required inputmode="numeric" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
-                            <small class="form-text text-muted validation-message">Digite um CPF válido.</small>
-                        </div>
-
-                        <div class="form-group password-container">
-                            <label for="register-password">Senha</label>
-                            <input type="password" id="register-password" placeholder="Crie uma senha" required>
-                            <span class="password-toggle" id="toggle-register-password">
-                                <i class="fas fa-eye"></i>
-                            </span>
-                            <small class="form-text text-muted validation-message">Mínimo 6 caracteres, um número e um símbolo.</small>
-                        </div>
-
-                        <div class="form-group password-container">
-                            <label for="register-confirm-password">Confirmar Senha</label>
-                            <input type="password" id="register-confirm-password" placeholder="Confirme sua senha" required>
-                            <span class="password-toggle" id="toggle-register-confirm-password">
-                                <i class="fas fa-eye"></i>
-                            </span>
-                            <small class="form-text text-muted validation-message">As senhas devem corresponder.</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="register-photo">Foto de Perfil</label>
-                            <input type="file" id="register-photo" name="foto" accept="image/*" required>
-                        </div>
-
-                        <div class="form-options">
-                            <label class="terms-checkbox">
-                                <input type="checkbox" id="terms" required>
-                                <span>Concordo com os <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a></span>
-                            </label>
-                        </div>
-
-                        <button type="submit" class="btn-submit">Criar Conta</button>
-                    </form>
-                </div>
-
-                <div class="form-container" id="forgot-password-form">
-                    <h2>Recuperar Senha</h2>
-                    <p class="form-description">
-                        Digite seu e-mail para receber um link de recuperação.
-                    </p>
-
-                    <form>
-                        <div class="form-group">
-                            <label for="recovery-email">E-mail</label>
-                            <input type="email" id="recovery-email" placeholder="Seu e-mail" required>
-                        </div>
-
-                        <button type="submit" class="btn-submit">Enviar Link</button>
-                        <button type="button" class="btn-secondary" id="back-to-login">Voltar para o Login</button>
-                    </form>
-                </div>
-            </div>
+  <main>
+    <div class="auth-container">
+      <div class="auth-box">
+        <div class="tabs">
+          <button class="tab-btn active" data-tab="login">Login</button>
+          <button class="tab-btn" data-tab="register">Criar Conta</button>
         </div>
-    </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-about">
-                    <h3>Auto<span>Elite</span></h3>
-                    <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="footer-links">
-                    <h4>Links Rápidos</h4>
-                    <ul>
-                        <li><a href="index.html">Início</a></li>
-                        <li><a href="veiculos.html">Veículos</a></li>
-                        <li><a href="servicos.html">Serviços</a></li>
-                        <li><a href="contatos.html">Contato</a></li>
-                    </ul>
-                </div>
-                <div class="footer-contact">
-                    <h4>Contato</h4>
-                    <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> Av. Brasil, 1500 - São Paulo, SP</li>
-                        <li><i class="fas fa-phone"></i> (11) 3456-7890</li>
-                        <li><i class="fas fa-envelope"></i> contato@autoelite.com.br</li>
-                        <li><i class="fas fa-clock"></i> Seg-Sex: 8h às 18h | Sáb: 9h às 14h</li>
-                    </ul>
-                </div>
-                <div class="footer-newsletter">
-                    <h4>Newsletter</h4>
-                    <p>Receba nossas ofertas e novidades por e-mail</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Seu e-mail">
-                        <button type="submit" class="btn">Assinar</button>
-                    </form>
-                </div>
+        <div class="form-container active" id="login-form">
+          <h2>Acessar minha conta</h2>
+          <form>
+            <div class="form-group">
+              <label for="login-email">E-mail</label>
+              <input type="email" id="login-email" placeholder="Seu e-mail" required />
+              <span id="erroLoginEmail" class="erro"></span>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
-                <div class="footer-bottom-links">
-                    <a href="#">Política de Privacidade</a>
-                    <a href="#">Termos de Uso</a>
-                </div>
+
+            <div class="form-group password-container">
+              <label for="login-password">Senha</label>
+              <input type="password" id="login-password" placeholder="Sua senha" required />
+              <span class="password-toggle" id="toggle-login-password">
+                <i class="fas fa-eye"></i>
+              </span>
+              <span id="erroLoginSenha" class="erro"></span>
             </div>
+
+            <div class="form-options">
+              <label class="remember-me">
+                <input type="checkbox" id="remember" />
+                <span>Lembrar-me</span>
+              </label>
+              <a href="#" class="forgot-password" id="forgot-password-link">Esqueci minha senha</a>
+            </div>
+
+            <button type="submit" class="btn-submit">Entrar</button>
+            <button onclick="window.location.href='index.html'" class="btn-home" type="button">Início</button>
+          </form>
         </div>
-    </footer>
+
+        <div class="form-container" id="register-form">
+          <h2>Criar nova conta</h2>
+          <form id="form-registro">
+            <div class="form-group">
+              <label for="register-name">Nome completo</label>
+              <input type="text" id="register-name" placeholder="Seu nome completo" required />
+            </div>
+
+            <div class="form-group">
+              <label for="register-email">E-mail</label>
+              <input type="email" id="register-email" placeholder="Seu e-mail" required />
+              <small class="form-text text-muted validation-message">Insira um e-mail do Gmail no formato correto.</small>
+            </div>
+
+            <div class="form-group">
+              <label for="register-phone">Telefone</label>
+              <input type="tel" id="register-phone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" />
+              <small class="form-text text-muted validation-message">Formato: (XX) 9XXXXXXXX.</small>
+            </div>
+
+            <div class="form-group">
+              <label for="cpf">CPF</label>
+              <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required inputmode="numeric" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
+              <small class="form-text text-muted validation-message">Digite um CPF válido.</small>
+            </div>
+            <div class="form-group password-container">
+            <label for="register-password">Senha</label>
+            <input
+                type="password"
+                id="register-password"
+                placeholder="Crie uma senha"
+                required
+            />
+            <span class="password-toggle" id="toggle-register-password">
+                <i class="fas fa-eye"></i>
+            </span>
+            <span id="erroSenha" class="erro"></span>
+            </div>
+
+            <div class="form-group password-container">
+            <label for="register-confirm-password">Confirmar Senha</label>
+            <input
+                type="password"
+                id="register-confirm-password"
+                placeholder="Confirme sua senha"
+                required
+            />
+            <span class="password-toggle" id="toggle-register-confirm-password">
+                <i class="fas fa-eye"></i>
+            </span>
+            <span id="erroConfirmarSenha" class="erro"></span>
+            </div>
+            <div class="form-group">
+              <label for="register-photo">Foto de Perfil</label>
+              <input type="file" id="register-photo" name="foto" accept="image/*" required />
+            </div>
+
+            <div class="form-options">
+              <label class="terms-checkbox">
+                <input type="checkbox" id="terms" required />
+                <span>Concordo com os <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a></span>
+              </label>
+            </div>
+
+            <button type="submit" class="btn-submit">Criar Conta</button>
+          </form>
+        </div>
+
+        <div class="form-container" id="forgot-password-form">
+          <h2>Recuperar Senha</h2>
+          <p class="form-description">
+            Digite seu e-mail para receber um link de recuperação.
+          </p>
+
+          <form>
+            <div class="form-group">
+              <label for="recovery-email">E-mail</label>
+              <input type="email" id="recovery-email" placeholder="Seu e-mail" required />
+            </div>
+
+            <button type="submit" class="btn-submit">Enviar Link</button>
+            <button type="button" class="btn-secondary" id="back-to-login">Voltar para o Login</button>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-about">
+          <h3>Auto<span>Elite</span></h3>
+          <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+        <div class="footer-links">
+          <h4>Links Rápidos</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="autenticacao.html">Login</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h4>Contato</h4>
+          <ul>
+            <li><i class="fas fa-map-marker-alt"></i> Av. Principal, 123 - Cidade, Estado</li>
+            <li><i class="fas fa-phone"></i> (11) 99999-9999</li>
+            <li><i class="fas fa-envelope"></i> contato@autoelite.com</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 AutoElite. Todos os direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
     <script src="/routes/autenticacao.js"></script>
+    <script>
+
+    </script>
 </body>
 
 </html>
