--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -6,33 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="AutoElite - Faça login ou crie sua conta." />
   <title>Login | AutoElite</title>
+
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/autenticacao.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
   <main>
     <div class="auth-container">
       <div class="auth-box">
+
+        <!-- Abas -->
         <div class="tabs">
           <button class="tab-btn active" data-tab="login">Login</button>
           <button class="tab-btn" data-tab="register">Criar Conta</button>
         </div>
 
+        <!-- Formulário de Login -->
         <div class="form-container active" id="login-form">
           <h2>Acessar minha conta</h2>
-          <form>
+          <form id="form-login">
             <div class="form-group">
               <label for="login-email">E-mail</label>
-              <input type="email" id="login-email" placeholder="Seu e-mail" required />
+              <input type="email" id="login-email" name="email" placeholder="Seu e-mail" required />
               <span id="erroLoginEmail" class="erro"></span>
             </div>
 
             <div class="form-group password-container">
               <label for="login-password">Senha</label>
-              <input type="password" id="login-password" placeholder="Sua senha" required />
+              <input type="password" id="login-password" name="senha" placeholder="Sua senha" required />
               <span class="password-toggle" id="toggle-login-password">
                 <i class="fas fa-eye"></i>
               </span>
@@ -48,27 +59,27 @@
             </div>
 
             <button type="submit" class="btn-submit">Entrar</button>
-            <button onclick="window.location.href='index.html'" class="btn-home" type="button">Início</button>
+            <button type="button" class="btn-home" onclick="window.location.href='index.html'">Início</button>
           </form>
         </div>
-
         <div class="form-container" id="register-form">
           <h2>Criar nova conta</h2>
           <form id="form-registro">
             <div class="form-group">
               <label for="register-name">Nome completo</label>
-              <input type="text" id="register-name" placeholder="Seu nome completo" required />
+              <input type="text" id="register-name" name="nome" placeholder="Seu nome completo" required />
+              <small class="form-text text-muted validation-message">Digite seu nome completo (mínimo 8 caracteres).</small>
             </div>
 
             <div class="form-group">
               <label for="register-email">E-mail</label>
-              <input type="email" id="register-email" placeholder="Seu e-mail" required />
+              <input type="email" id="register-email" name="email" placeholder="Seu e-mail" required />
               <small class="form-text text-muted validation-message">Insira um e-mail do Gmail no formato correto.</small>
             </div>
 
             <div class="form-group">
               <label for="register-phone">Telefone</label>
-              <input type="tel" id="register-phone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" />
+              <input type="tel" id="register-phone" name="telefone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" />
               <small class="form-text text-muted validation-message">Formato: (XX) 9XXXXXXXX.</small>
             </div>
 
@@ -77,33 +88,27 @@
               <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required inputmode="numeric" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
               <small class="form-text text-muted validation-message">Digite um CPF válido.</small>
             </div>
+
             <div class="form-group password-container">
-            <label for="register-password">Senha</label>
-            <input
-                type="password"
-                id="register-password"
-                placeholder="Crie uma senha"
-                required
-            />
-            <span class="password-toggle" id="toggle-register-password">
+              <label for="register-password">Senha</label>
+              <input type="password" id="register-password" name="senha" placeholder="Crie uma senha" required />
+              <span class="password-toggle" id="toggle-register-password">
                 <i class="fas fa-eye"></i>
-            </span>
-            <span id="erroSenha" class="erro"></span>
+              </span>
+              <small class="form-text text-muted validation-message">Mínimo 6 caracteres, um número e um símbolo.</small>
+              <span id="erroSenha" class="erro"></span>
             </div>
 
             <div class="form-group password-container">
-            <label for="register-confirm-password">Confirmar Senha</label>
-            <input
-                type="password"
-                id="register-confirm-password"
-                placeholder="Confirme sua senha"
-                required
-            />
-            <span class="password-toggle" id="toggle-register-confirm-password">
+              <label for="register-confirm-password">Confirmar Senha</label>
+              <input type="password" id="register-confirm-password" name="confirmarSenha" placeholder="Confirme sua senha" required />
+              <span class="password-toggle" id="toggle-register-confirm-password">
                 <i class="fas fa-eye"></i>
-            </span>
-            <span id="erroConfirmarSenha" class="erro"></span>
+              </span>
+              <small class="form-text text-muted validation-message">As senhas devem corresponder.</small>
+              <span id="erroConfirmarSenha" class="erro"></span>
             </div>
+
             <div class="form-group">
               <label for="register-photo">Foto de Perfil</label>
               <input type="file" id="register-photo" name="foto" accept="image/*" required />
@@ -119,19 +124,17 @@
             <button type="submit" class="btn-submit">Criar Conta</button>
           </form>
         </div>
-
+        <!-- Formulário de Recuperação -->
         <div class="form-container" id="forgot-password-form">
           <h2>Recuperar Senha</h2>
           <p class="form-description">
             Digite seu e-mail para receber um link de recuperação.
           </p>
-
-          <form>
+          <form id="form-recuperacao">
             <div class="form-group">
               <label for="recovery-email">E-mail</label>
-              <input type="email" id="recovery-email" placeholder="Seu e-mail" required />
+              <input type="email" id="recovery-email" name="email" placeholder="Seu e-mail" required />
             </div>
-
             <button type="submit" class="btn-submit">Enviar Link</button>
             <button type="button" class="btn-secondary" id="back-to-login">Voltar para o Login</button>
           </form>
@@ -141,6 +144,7 @@
     </div>
   </main>
 
+  <!-- Rodapé -->
   <footer>
     <div class="container">
       <div class="footer-grid">
@@ -177,10 +181,9 @@
       </div>
     </div>
   </footer>
-    <script src="/routes/autenticacao.js"></script>
-    <script>
 
-    </script>
+  <!-- Scripts -->
+  <script src="/routes/autenticacao.js" defer></script>
 </body>
 
 </html>
