--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -10,6 +10,14 @@
   
 </head>
 <body>
+  <!-- Adicionar verificação de acesso no início do body -->
+  <script src="/routes/sessao.js"></script>
+  <script>
+    // Verificar autorização antes de carregar o conteúdo da página
+    if (!protectAdminRoute()) {
+      document.body.innerHTML = 'Redirecionando...';
+    }
+  </script>
 
   <!-- Header -->
   <header>
@@ -175,7 +183,7 @@
     </div>
 </footer>
 
-  <script src="/routes/sessao.js" defer></script>
+  <!-- Remover a segunda inclusão do script de sessão, pois já foi incluído no início -->
   <script src="/CRUDveiculos.js" defer></script>
 
 </body>
