--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="veiculos.html" class="active">Veículos</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
                     <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
