--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -99,7 +99,8 @@
             </div>
             <div class="avatar-upload-wrapper">
               <label for="avatar-upload" class="avatar-upload-label">Escolher Foto</label>
-              <input type="file" id="avatar-upload" accept="image/*" style="display:none;" />
+              <input type="file" id="avatar-upload" name="foto" accept="image/*" style="display:none;" />
+
             </div>
           </div>
 
