Alterações Confirm e alert

--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -61,6 +61,16 @@
                 <a href="veiculos.html" class="btn btn-primary">Ver Veículos</a>
             </div>
         </div>
+        <div id="popup-confirmacao" class="popup-container hidden">
+             <div class="popup-box">
+                 <p>Tem certeza que deseja remover todos os veículos dos favoritos?</p>
+             <div class="popup-actions">
+                <button id="confirmar-limpar">Sim</button>
+                <button id="cancelar-limpar">Cancelar</button>
+             </div>
+         </div>
+        </div>
+
     </section>
 
     <!-- Footer -->
@@ -113,6 +123,7 @@
             </div>
         </div>
     </footer>
+
 
     <script src="/routes/sessao.js" type="module" defer></script>
     <script src="favoritos.js"></script>
