erro de script corrigido

--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -125,7 +125,7 @@
     </footer>
 
 
-    <script src="/routes/sessao.js" type="module" defer></script>
+    <script src="/routes/sessao.js" defer></script>
     <script src="favoritos.js"></script>
 </body>
 </html>
