--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -301,7 +301,7 @@
         </div>
     </footer>
     
-    <script src="/routes/sessao.js" type="module" defer></script>
+    <script src="/routes/sessao.js" defer></script>
     <script src="favoritos.js"></script>
     <script src="veiculos-dinamicos.js"></script>
 </body>
