autoria naturalidade CRUDusuario

--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -118,6 +118,8 @@
               <label for="nome">Nome completo</label>
               <input type="text" id="nome" name="nome" required />
               <small class="form-text text-muted validation-message">Digite o nome do usuário.</small>
+               <label for="naturalidade">naturalidade</label>
+              <input type="text" id="naturalidade" name="naturalidade" required />
             </div>
             <div class="form-group">
               <label for="email">Email</label>
