--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -6,7 +6,8 @@
   <title>Editar Perfil</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-50 min-h-screen font-sans text-gray-800">
+<body class="bg-blue-100 min-h-screen font-sans text-gray-800">
+
 
   <!-- Alerta de sucesso fixo no topo -->
   <div id="alerta-sucesso" class="hidden fixed top-4 left-1/2 transform -translate-x-1/2 bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg z-50 transition-opacity duration-500 opacity-0">
@@ -95,16 +96,23 @@
     </form>
   </div>
 
-  <!-- Header com nome e imagem do usuário -->
-  <header class="fixed top-4 right-4 flex items-center gap-3 sm:gap-4" id="perfil-area" style="display: none;">
-    <span id="nome-usuario" class="text-gray-800 text-sm sm:text-base font-semibold truncate max-w-[120px] sm:max-w-[180px]"></span>
-    <img id="foto-perfil" src="" alt="Foto perfil" class="w-9 h-9 sm:w-10 sm:h-10 rounded-full object-cover border border-gray-300" />
-  </header>
+  <!-- Header com nome, imagem do usuário e botão "Início" -->
+<header class="fixed top-4 right-4 flex items-center gap-3 sm:gap-4" id="perfil-area" style="display: none;">
+  <span id="nome-usuario" class="text-gray-800 text-sm sm:text-base font-semibold truncate max-w-[120px] sm:max-w-[180px]"></span>
+  <img id="foto-perfil" src="" alt="Foto perfil" class="w-9 h-9 sm:w-10 sm:h-10 rounded-full object-cover border border-gray-300" />
+  
+  <!-- Botão de Início -->
+  <a href="index.html" class="bg-blue-500 hover:bg-blue-600 text-white text-sm sm:text-base font-medium px-4 py-2 rounded-lg shadow transition duration-300">
+    Início
+  </a>
+</header>
+
 
   <!-- Link de login -->
   <a href="/login.html" id="login-link" class="fixed top-4 right-4 text-blue-600 underline text-sm sm:text-base">Login</a>
 
   <script src="perfil.js"></script>
+  <script src="sessao.js"></script>
   <script>
     document.getElementById("form-perfil").addEventListener("submit", function (e) {
       e.preventDefault();
