--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -92,7 +92,7 @@
             <div class="form-group password-container">
               <label for="register-password">Senha</label>
               <input type="password" id="register-password" name="senha" placeholder="Crie uma senha" required />
-              <small class="form-text text-muted validation-message">Mínimo 6 caracteres, um número e um símbolo.</small>
+              <small class="form-text text-muted validation-message">Mínimo de 6 caracteres contendo um número e um caractere especial.</small>
               <span id="erroSenha" class="erro"></span>
             </div>
 
