--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -130,7 +130,7 @@
                 <input type="password" id="senha" class="form-control" />
                 <span class="password-pisca" data-target="senha"><i class="fas fa-eye"></i></span>
               </div>
-              <small class="form-text text-muted validation-message">Necessário conter pelomenos um carácter especial e número.</small>
+              <small class="form-text text-muted validation-message">Necessário conter pelo menos um caractere especial e número.</small>
             </div>
             <div class="form-group">
               <label for="confirmar-senha">Confirmar Senha:</label>
