--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -35,10 +35,10 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="veiculos.html">Veículos</a></li>
-          <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="contatos.html">Contato</a></li>
+          <li><a href="proposta.html">Faça sua Proposta</a></li>
           <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
           <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
+          <li id="tickets"><a href="tickets.html">tickets</a></li>
         </ul>
       </nav>
       <div class="login-button">
@@ -53,7 +53,6 @@
     <div class="container">
       <div class="breadcrumb">
         <a href="/index.html"><i class="fas fa-home"></i> Início</a> &gt;
-        <a href="/admin/dashboard.html">Painel Admin</a> &gt;
         <span>Gerenciamento de Usuários</span>
       </div>
     </div>
