--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -19,10 +19,10 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="contatos.html">Contato</a></li>
+                    <li><a href="proposta.html">Faça sua Proposta</a></li>
                     <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
                     <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
+                    <li id="tickets"><a href="tickets.html">tickets</a></li>
                 </ul>
             </nav>
             <div class="login-button" id="user-info">
@@ -127,5 +127,6 @@
 
     <script src="/routes/sessao.js" defer></script>
     <script src="favoritos.js"></script>
+
 </body>
 </html>
