--- a/pages/index.html
+++ b/pages/index.html
@@ -17,12 +17,12 @@
 
     <nav>
       <ul>
-        <li><a href="/index.html">Início</a></li>
-        <li><a href="/veiculos.html">Veículos</a></li>
-        <li><a href="/servicos.html">Serviços</a></li>
-        <li><a href="/contatos.html">Contato</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="veiculos.html">Veículos</a></li>
+        <li><a href="proposta.html">Faça sua Proposta</a></li>
         <li id="CrudUsuario"><a href="/CRUDusuario.html">CRUDusuario</a></li>
         <li id="CrudVeiculos"><a href="/CRUDveiculos.html">CRUDveiculos</a></li>
+        <li id="tickets"><a href="tickets.html">tickets</a></li>
       </ul>
     </nav>
 
@@ -220,7 +220,6 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
                 </ul>
             </div>
